--- a/_config.yml
+++ b/_config.yml
@@ -13,17 +13,13 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Tachartasan.info
+title: An t-Ubhal-ghort
 email: chris@macmhicheil.uk
-description: Iùl-lann de thachartasan a' buntainn ris a' Ghàidhlig.
-baseurl: "" # the subpath of your site, e.g. /blog
+description: A' toirt thugaibh na naidheachdan teicneòlais as ùire le fòcas àraidh air teicneòlas Apple
+baseurl: "/atug" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 permalink: /:year/:month/:day/:title/
 
-# Pagination number
-plugins: [jekyll-paginate]
-paginate: 10
-paginate_path: /duilleag-:num/
 
 # Build settings
 markdown: kramdown
@@ -44,7 +40,7 @@ plugins:
 #   - vendor/ruby/
 
 # Sets the color of the header and page links
-featured-color: "#3F7DF8"
+featured-color: "#556b2f"
 
 # Separator to mark end of post excerpt
 excerpt_separator: <!--more-->
