--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: An t-Ubhal-ghort
 email: chris@macmhicheil.uk
 description: A' toirt thugaibh na naidheachdan teicneòlais as ùire le fòcas àraidh air teicneòlas Apple
-baseurl: "/atug" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 permalink: /:year/:month/:day/:title/
 
