--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,11 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 permalink: /:year/:month/:day/:title/
 
 
+# Pagination number
+plugins: [jekyll-paginate]
+paginate: 10
+paginate_path: /duilleag-:num/
+
 # Build settings
 markdown: kramdown
 theme: minima
