--- a/_config.yml
+++ b/_config.yml
@@ -13,13 +13,12 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: An t-Ubhal-ghort
+title: Tachartasan.info
 email: chris@macmhicheil.uk
-description: A' toirt thugaibh na naidheachdan teicneòlais as ùire le fòcas àraidh air teicneòlas Apple
+description: Iùl-lann de thachartasan a bhuineas ris a' Ghàidhlig no a' Ghàidhealtachd
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 permalink: /:year/:month/:day/:title/
-
 
 # Pagination number
 plugins: [jekyll-paginate]
